Wed Feb 20 13:08:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (parse_args): added --dir-mode, --script-mode and
	  --cmd-type options.  [ruby-dev:33816]

	* instruby.rb (parse_args): added bin-arch and bin-comm to install
	  type, for compiled files and script files.

	* instruby.rb (parse_args): deal with make style command line macros,
	  and count as long syle options if prefixed with INSTALL_.

	* instruby.rb (makedirs): use $dir_mode.  [ruby-dev:33805]

	* instruby.rb (open_for_install): set file mode, which is now
	  permission mode instead of access mode.

	* instruby.rb (bin-comm): installs scripts with replacing shebang
	  lines.

Tue Feb 19 18:34:32 2008  Tanaka Akira  <akr@fsij.org>

	* gc.c (STACK_LENGTH) [SPARC] : 0x80 offset removed.  [ruby-dev:33857]

Tue Feb 19 14:27:32 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c (readline_event): prevent polling.  based on
	  a patch from error errorsson in [ruby-Bugs-17675].

Tue Feb 19 12:08:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (yycompile): clear ruby_eval_tree_begin if parse failed.

Mon Feb 18 16:23:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (yycompile): clear ruby_eval_tree_begin too before parse.

Mon Feb 18 10:17:42 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/lib/expect.rb (IO#expect): check if peer is closed.
	  [ruby-Bugs-17940]

Fri Feb 15 20:37:06 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/rational.rb (floor, ceil, truncate, round): do not use
	  definitions of Numeric.

	* lib/rational.rb (to_i): should returns truncated self.

	* lib/complex.rb (numerator): requires
	  Integer#{numerator,denominator}.

	* lib/complex.rb (quo): do not use definition of Numeric.

	* lib/complex.rb (div, divmod, floor, ceil, truncate, round):
	  undef'ed.

Fri Feb 15 15:23:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (iconv_convert): check upper bound.  a patch from