@@ -185,8 +185,8 @@ static struct {
     {	WSAEMFILE,			EMFILE		},
 };
 
-static int
-map_errno(DWORD winerr)
+int
+rb_w32_map_errno(DWORD winerr)
 {
     int i;
 
@@ -205,6 +205,8 @@ map_errno(DWORD winerr)
     }
     return EINVAL;
 }
+
+#define map_errno rb_w32_map_errno
 
 static char *NTLoginName;
 
