@@ -1,3 +1,7 @@
+Wed Feb 20 23:55:19 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (rb_w32_map_errno): exported.
+
 Wed Feb 20 13:08:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* instruby.rb (parse_args): added --dir-mode, --script-mode and
